Versão 1 - 10/10/2013 - 14:18 Inicio Alteração - 2

--- a/application/views/scripts/index/alterar.phtml
+++ b/application/views/scripts/index/alterar.phtml
@@ -15,7 +15,7 @@
             <?php echo $this->submitBusca; ?>
         </div>
     </form>
-    <table>
+    <table id="tabela1" cellspacing="0" padding="0" border="1" class="display">
         <thead>
             <tr>
                 <th>Status</th>
