Carrega Dados, faltando somente desabilitar campos

--- a/application/views/scripts/index/alterar.phtml
+++ b/application/views/scripts/index/alterar.phtml
@@ -1,6 +1,7 @@
 <h1 class="titulo_conteudo">Alteração de Projetos</h1>
 <div class="buscador">
     <form id="busca">
+        <input type="hidden" name="id" />
         <div class="unidade_busca">
             <label>Unidade</label>
             <br/>
