--- a/application/views/scripts/index/acompanhar.phtml
+++ b/application/views/scripts/index/acompanhar.phtml
@@ -1,4 +1,116 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Index</b> and script/action name <b>acompanhar</b></p>
+<h1 class="titulo_conteudo">Acompanhamento de Projetos</h1>
+<div class="buscador">
+    <form id="busca">
+        
+        <div class="unidade_busca">
+            <label>Unidade</label>
+            <br/>
+            <?php echo $this->unidadeBusca; ?>
+        </div>
+        <div class="status_busca">
+            <label>Status</label>
+            <br/>
+            <?php echo $this->statusBusca; ?>
+        </div>
+        <div class="botao_pesquisa">
+            <?php echo $this->submitBusca; ?>
+        </div>
+    </form>
+    <table id="tabela1" cellspacing="0" padding="0" border="1" class="display">
+        <thead>
+            <tr>
+                <th>Status</th>
+		<th>Unidade</th>
+                <th>Título do Projeto</th>
+                <th>Cliente</th>
+                <th>SubProjeto FAI</th>	
+            </tr>
+        </thead>
+         <?php echo $this->tabela; ?>
+    </table>
 </div>
+<div class="linha_separadora"></div>
+<form method="post" action="/alteracao">
+    <br />
+    <div id="status" class="margem">
+        <label class="label">Status do Projeto</label>
+        <br />
+        <label class="sub_label">Escolha o status do projeto</label>
+        <?php echo $this->status; ?>
+    </div>
+    <h4 class="separador margem" id="dados">Dados do Projeto</h4>
+    <div id="dados_projeto" class="margem">
+        <br/>
+        <label class="label">Cliente</label>
+        <br />
+        <label class="sub_label">Insira o nome do cliente do projeto</label>
+        <?php echo $this->cliente; ?>
+        <br/>
+        <label class="label">Título do Projeto</label>
+        <br/>
+        <label class="sub_label">Insira o título do projeto</label>
+        <?php echo $this->tituloProjeto; ?>
+        <br/>
+        <div id="corrido">
+            <div class="esquerda">
+                <label class="label">SubProjeto FAI</label>
+                <br/>
+                <label class="sub_label">Insira o código do projeto na FAI</label>        
+                <?php echo $this->subProjetoFAI;  ?>
+            </div>
+            <div class="direita">
+                <label class="label">Unidade de Negócio</label>
+               <br/>
+               <label class="sub_label">Escolha a UN do CCDM que coordena o projeto</label>
+               <?php echo $this->unidade; ?>
+            </div>
+        </div>
+    </div>
+    <h4 class="separador margem" id="prazos">Prazos</h4>
+    <div id="prazos_div" class="margem">
+        <br/>
+        <div id="dataapp">
+            <label class="label">Data Prevista de Início</label>
+            <br/>
+            <label class="sub_label">Insira a data prevista de início</label>
+            <?php echo $this->dataPreInicio; ?>
+        </div>
+        <div id="dataproj">
+            <label class="label">Data real de Inicio</label>
+            <br/>
+            <label class="sub_label">Insira a data real de início</label>
+            <?php echo $this->dataInicio; ?>
+        </div>
+        <div id="dataprevistainicio">
+            <label class="label">Data Prevista de Término</label>
+            <br/>
+            <label class="sub_label">Insira a data prevista de término</label>
+            <?php echo $this->dataPreTermino; ?>
+        </div>
+        <div id="dataprevistatermino">
+            <label class="label">Data real de Término</label>
+            <br/>
+            <label class="sub_label">Insira a data real de término</label>
+            <?php echo $this->dataTermino; ?>
+        </div>
+    </div>
+    <h4 class="separador margem" id="financeiro">Financeiro</h4>
+    <div id="financeiro_div" class="margem">
+        <br/>
+        <label class="label">Valor pago do Projeto (em R$)</label>
+        <br/>
+        <label class="sub_label">Atualize o valor pago para o projeto até o momento</label>
+        <?php echo $this->valorPago; ?>
+        <br/>
+        <label class="label">Investimento realizado (em R$)</label>
+        <br/>
+        <label class="sub_label">Atualize o valor investido para o projeto até o momento</label>
+        <?php echo $this->investimentoFeito; ?>
+        <br/>
+        <label class="label">Observações</label>
+        <?php echo $this->ob; ?>  
+     </div>
+    <?php echo $this->submit; ?>
+    <input type="hidden" name="id_altera" id="id_altera"/>
+</form>
+        
