--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ nav ul li a:hover {
 #cadastra {
     	min-width:1170px;
 	width:1200px;
-	max-width:3000px;
+	max-width:2000px;
 	border:1px solid #000;
 	font-family:Ubuntu;
 	margin:auto;
@@ -71,7 +71,19 @@ nav ul li a:hover {
 #altera {
     	min-width:1170px;
 	width:1200px;
-	max-width:3000px;
+	max-width:2000px;
+	border:1px solid #000;
+	font-family:Ubuntu;
+	margin:auto;
+	margin-top:70px;
+	height: auto;
+	border-radius:0.9%;
+}
+
+#acompanha {
+    	min-width:1170px;
+	width:1200px;
+	max-width:2000px;
 	border:1px solid #000;
 	font-family:Ubuntu;
 	margin:auto;
