Acompanhamento Quase Pronto

--- a/application/views/scripts/index/acompanhar.phtml
+++ b/application/views/scripts/index/acompanhar.phtml
@@ -30,7 +30,7 @@
     </table>
 </div>
 <div class="linha_separadora"></div>
-<form method="post" action="/alteracao">
+<form method="post" action="/acompanhamento">
     <br />
     <div id="status" class="margem">
         <label class="label">Status do Projeto</label>
@@ -73,7 +73,7 @@
             <label class="label">Data Prevista de Início</label>
             <br/>
             <label class="sub_label">Insira a data prevista de início</label>
-            <?php echo $this->dataPreInicio; ?>
+            <?php echo $this->dataPrevistaIni; ?>
         </div>
         <div id="dataproj">
             <label class="label">Data real de Inicio</label>
@@ -85,7 +85,7 @@
             <label class="label">Data Prevista de Término</label>
             <br/>
             <label class="sub_label">Insira a data prevista de término</label>
-            <?php echo $this->dataPreTermino; ?>
+            <?php echo $this->dataPrevistaTer; ?>
         </div>
         <div id="dataprevistatermino">
             <label class="label">Data real de Término</label>
