--- a/application/layouts/scripts/nav.phtml
+++ b/application/layouts/scripts/nav.phtml
@@ -10,7 +10,7 @@
             <a href="/acompanhamento">Acompanhamento</a>
         </li>
         <li>
-            <a href="">Relatórios</a>
+            <a href="/relatorios">Relatórios</a>
         </li>
         <li>
             <a href="">Sair</a>
