--- a/application/views/scripts/index/alterar.phtml
+++ b/application/views/scripts/index/alterar.phtml
@@ -1,4 +1,5 @@
 <h1 class="titulo_conteudo">Alteração de Projetos</h1>
+<?php echo $this->teste; ?>
 <div class="buscador">
     <form id="busca">
         
