--- a/application/views/scripts/index/alterar.phtml
+++ b/application/views/scripts/index/alterar.phtml
@@ -121,5 +121,6 @@
     </div>
     <?php echo $this->submit; ?>
     <input type="hidden" name="id_altera" id="id_altera"/>
+    <input type="hidden" name="mexeuValorProposto" value="0" />
 </form>
 
