--- a/application/views/scripts/index/acompanhar.phtml
+++ b/application/views/scripts/index/acompanhar.phtml
@@ -112,5 +112,8 @@
      </div>
     <?php echo $this->submit; ?>
     <input type="hidden" name="id_altera" id="id_altera"/>
+    <input type="hidden" name="mexeValor" value="0" />
+    <input type="hidden" name="mexeuInvestimento" value="0"/>
+    <?php echo $this->teste; ?>
 </form>
         
