--- a/application/views/scripts/index/alterar.phtml
+++ b/application/views/scripts/index/alterar.phtml
@@ -122,5 +122,6 @@
     <?php echo $this->submit; ?>
     <input type="hidden" name="id_altera" id="id_altera"/>
     <input type="hidden" name="mexeuValorProposto" value="0" />
+    <input type="hidden" name="result" value="<?php echo $this->resultado; ?>" />
 </form>
 
