Colocando Investimento Previsto

--- a/application/views/scripts/index/acompanhar.phtml
+++ b/application/views/scripts/index/acompanhar.phtml
@@ -76,7 +76,7 @@
             <?php echo $this->dataPrevistaIni; ?>
         </div>
         <div id="dataproj">
-            <label class="label">Data real de Inicio</label>
+            <label class="label">Data Real de Inicio</label>
             <br/>
             <label class="sub_label">Insira a data real de início</label>
             <?php echo $this->dataInicio; ?>
@@ -88,7 +88,7 @@
             <?php echo $this->dataPrevistaTer; ?>
         </div>
         <div id="dataprevistatermino">
-            <label class="label">Data real de Término</label>
+            <label class="label">Data Real de Término</label>
             <br/>
             <label class="sub_label">Insira a data real de término</label>
             <?php echo $this->dataTermino; ?>
