--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -76,12 +76,18 @@
     <h4 class="separador margem" id="financeiro">Financeiro</h4>
     <div id="financeiro_div" class="margem">
         <br/>
-        <label class="label">Valor proposto do projeto (em R$)</label>
+        <label class="label">Valor Proposto do Projeto (em R$)</label>
         <br/>
         <label class="sub_label">Insira o valor total proposto para o projeto</label>
         <?php echo $this->valorProposto; ?>
         <br/>
-        <label class="label">Esse projeto é ?</label>
+        <br/>
+        <label class="label">Valor Previsto de Investimento (em R$)</label>
+        <br/>
+        <label class="sub_label">Insira o valor total previsto de investimento</label>
+        <?php echo $this->valorInvestimento; ?>
+        <br/>
+        <label class="label">Este projeto é ?</label>
         <?php echo $this->ProjetoServico; ?>
         <br/>
         <label class="label">Observações</label>
