--- a/public/js/plugins/jquery.alerts-1.1/jquery.alerts.css
+++ b/public/js/plugins/jquery.alerts-1.1/jquery.alerts.css
@@ -17,7 +17,7 @@
 	text-align: center;
 	line-height: 1.75em;
 	color: #666;
-	background: #CCC url(sprite.png) top repeat-x;
+	background: #CCC url(images/title.gif) top repeat-x;
 	border: solid 1px #FFF;
 	border-bottom: solid 1px #999;
 	cursor: default;
@@ -26,47 +26,21 @@
 }
 
 #popup_content {
-	background: 16px 16px no-repeat url(info.gif);
+	background: 16px 16px no-repeat url(images/info.gif);
 	padding: 1em 1.75em;
 	margin: 0em;
 }
 
-#popup_content.info 
-{
-    color: #00529B;
-    background-color: #BDE5F8;    
-	background-image: url(info.png);
+#popup_content.alert {
+	background-image: url(images/info.gif);
 }
 
-#popup_content.success 
-{
-    color: #4F8A10;
-    background-color: #DFF2BF;    
-	background-image: url(success.png);
+#popup_content.confirm {
+	background-image: url(images/important.gif);
 }
 
-#popup_content.warning
-{
-    color: #9F6000;
-    background-color: #FEEFB3;
-	background-image: url(warning.png);
-}
-
-#popup_content.error 
-{
-    color: #D8000C;
-    background-color: #FFBABA;
-	background-image: url(error.png);
-}
-
-#popup_content.confirm 
-{        
-	background-image: url(important.gif);
-}
-
-#popup_content.prompt 
-{ 
-	background-image: url(help.gif);
+#popup_content.prompt {
+	background-image: url(images/help.gif);
 }
 
 #popup_message {
