Colocando Investimento Previsto

--- a/application/views/scripts/index/relatorio.phtml
+++ b/application/views/scripts/index/relatorio.phtml
@@ -1,5 +1,22 @@
 <style>
    
+    nav {
+    min-width:1400px;
+    width: 100%;
+    
+    background-color: #CC0000;
+    height: 35px;
+    box-shadow:3px 3px 3px #000;
+    margin: auto;
+}
+    #relatorios {
+        border:none;
+    }
+    
+    .buscadorRelatorios {
+        width: 1395px;
+        border-bottom: none;
+    }
 #busca {
     border-bottom: 1px solid #000;
     height: 65px;
@@ -130,6 +147,7 @@ table.dataTable tr.even td.sorting_1{ background-color: #FFF;}
                 <th>Valor Proposto</th>
                 <th>Valor Pago</th>
                 <th>Valor a Receber</th>
+                <th>Investimento Previsto</th>
                 <th>Valor Investido</th>
                 <th>Tipo de Projeto</th>
                 <th>Data de Início</th>
