--- a/application/views/scripts/index/relatorio.phtml
+++ b/application/views/scripts/index/relatorio.phtml
@@ -1,5 +1,7 @@
 <style>
-   
+    .titulo_conteudo {
+        box-shadow: 0px 0px 2px #000;
+    }
     nav {
     min-width:1400px;
     width: 100%;
