Fonte UbuntuUN SOROCABA

--- a/application/layouts/scripts/nav.phtml
+++ b/application/layouts/scripts/nav.phtml
@@ -13,7 +13,7 @@
             <a href="/relatorios">Relatórios</a>
         </li>
         <li>
-            <a href="">Sair</a>
+            <a onclick="javascript:fechaa();">Sair</a>
         </li>
     </ul>
 </nav>
