--- a/application/views/scripts/index/acompanhar.phtml
+++ b/application/views/scripts/index/acompanhar.phtml
@@ -115,7 +115,7 @@
                 <div class="esquerda">
                     <label>Número de Parcelas Pagas = <span id="valorPagoLabel">0</span></label>
                     <br/>
-                    <a id="addParcela" style="color:blue;font-size: 15px;cursor: hand;cursor: pointer;" href="#" >Nova Parcela</a>
+                    <span id="addParcela" style="color:blue;font-size: 15px;cursor: hand;cursor: pointer;" >Nova Parcela</span>
                     <br/>
                     <div id="parcelas">
                         <p>
